test/tests/operators/serve_http/error_http_with_tls.txt
error: `http://` endpoint requires `tls=false`
 --> tests/operators/serve_http/error_http_with_tls.tql:8:12
  |
8 | serve_http "http://127.0.0.1:8080", tls=true {
  |            ^^^^^^^^^^^^^^^^^^^^^^^ 
  |
